--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <p>
-        
+        <span style="background:#FF8C00">
         <b>HTML-документ</b> — <u>это обычный текстовый документ</u>, может быть создан как в обычном текстовом редакторе
         (Блокнот), так и в специализированном, с подсветкой кода (Notepad++, Visual Studio Code и т.п.). HTML-документ
         имеет расширение .html.</p>
         <p><b>HTML-документ</b> состоит из дерева HTML-элементов и текста. Каждый элемент обозначается в исходном
         документе начальным (открывающим) и конечным (закрывающим) тегом (за редким исключением).</p>
-        <p><b>Начальный тег</b> показывает,<ins> <u>где начинается элемент,<ins><b>конечный</b> — <u><ins>где заканчивается</ins></u>. Закрывающий тег образуется
-        путем добавления слэша / перед именем тега:<i><имя тега>...</имя тега></i> Между начальным и закрывающим тегами
+        <p style="color:rgb(143,48,232);"><b>Начальный тег</b> показывает, <u>где начинается элемент</u>, <b>конечный</b> — <u>где заканчивается</u>. Закрывающий тег образуется
+        путем добавления слэша / перед именем тега:&lt;имя тега&gt;...&lt;/имя тега&gt;. Между начальным и закрывающим тегами
         находится содержимое элемента — контент.</p>
-        <p>Например:
-        <p>1.Контент – Создаёт параграф</p>
-        <p>2.<b>Контент</b> – Делает полужирное начертание</p>
-        <p>3.<i>Контент</i> – Курсивное начертание</p>
-        <p> Кожухов К.А. 10.02.2023</p>
+        <p>Например:</p>
+        <p style="color:blue">1. &lt;p&gt; Контент&lt;/p&gt; – Создаёт параграф</p>
+        <p><span style="background: #FF0000">2. &lt;b&gt; <b>Контент</b> &lt;/b&gt; – Делает полужирное начертание</p>
+        <p style="color:rgb(153,255,0)">. &lt;i&gt; <i>Контент</i> &lt;/i&gt; – Курсивное начертание</p>
+        <p>Кожухов К.А. 10.02.2023</p>
 </body>
 </html>
